Don't override default PULSAR_GC so that ZGenerational could be used on Java 21